☕️ Fixed Symbols and Event Spacing

--- a/src/components/eventCard.css
+++ b/src/components/eventCard.css
@@ -5,18 +5,18 @@
   grid-template-rows: 1fr 1fr;
   align-items: center;
   max-width: 400px;
-  border-radius: 20px;
-  margin: 40px 40px;
+  border-radius: 35px;
+  margin: 40px;
   box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
   max-height: 150px;
 }
 
 .Card h1 {
   color: white;
-  border-width: 5px;
   font-size: 27px;
   font-weight: 400;
   text-align: left;
+  margin: 20px 0px 10px 20px;
 }
 
 .Card p {
@@ -28,23 +28,33 @@
 
 .titleSymbol {
   display: grid;
-  grid-template-columns: 5fr 1fr;
+  grid-template-columns: 2fr 1fr;
+  margin-top: 10px;
 }
 .eventSymbol {
   color: white;
-  padding: 40px;
+  padding-top: 15px;
+  font-size: 30px;
+  margin: auto;
 }
 
 .eventInfo {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 3fr;
+  margin-bottom: 20px;
+}
+.circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  background: white;
+  margin-left: 20px;
 }
 .cal {
-  padding: 15px;
-  background-color: white;
-  border-radius: 25px;
+  padding: 10px 11px;
 }
 
 .eventInfo p {
-  font-weight: 400;
+  margin-left: -5px;
+  text-align: left;
 }
